--- a/src/app/all-users/all-users.component.css
+++ b/src/app/all-users/all-users.component.css
@@ -1,5 +1,7 @@
+  
    .container{
      align-items: center;
+      
    }
     .container .box {  
                 width:540px;  
@@ -17,3 +19,43 @@
             h1{
               text-align: center;
             }
+            .container .box .box-cell-header {  
+                display:table-cell;  
+                width:33%;  
+                padding-left: 10px;
+                padding-top: 10px;
+                padding-bottom: 10px;
+                padding-right: 0px;
+            } 
+    .info-card{
+    position: absolute;
+    transform: translate(10%, 0%);
+    border: 5px solid orange;
+    padding: 10px;
+    margin-left: 30%;
+    width: 30%;
+   
+}
+    .personal-info {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start ;
+    align-items: baseline;
+}
+.name{
+  display: flex;
+  align-items: baseline;
+  justify-content: space-between;
+   margin-top: -10px;
+   margin-bottom: -10px;
+   margin-left: 5px;
+   margin-right: 5px;
+}
+label{
+margin-right: 2px;
+}
+
+ .button{
+  margin-left: 20%;
+  width: 50%;
+}
