--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,7 @@
 /* Add application styles & imports to this file! */
+ body{background-color:  #6b5b95;}
+ button{
+   background-color: orange;
+   width: 100%;
+   border-radius: 5px 5px 5px 5px;
+ }
