--- a/src/app/all-users/all-users.component.html
+++ b/src/app/all-users/all-users.component.html
@@ -1,5 +1,5 @@
 <div class="main-container" >
-<div class="container" *ngIf="showuserList">
+<div class="container" *ngIf="showuserList && showPosts">
   <h1>All users List</h1>
   <div class="box">
     <div class="box-row"> 
@@ -32,8 +32,8 @@
                 </div>
    </div>                    
 </div>
-
-<div class="info-card" *ngIf="!showuserList">
+<h1 *ngIf="!showuserList && showPosts"> User Details </h1>
+<div class="info-card" *ngIf="!showuserList && showPosts">
   <h2>Personal Information</h2>
   <div class="personal-info">
   <div class="name">
@@ -98,7 +98,16 @@
   
 </div>
   <div class="button">
-   <button (click)="gotoUserList()">okay !!</button>
+   <button (click)="posts(selectedUser[0].id)">Show posts</button>
     </div>
+</div>
+<div *ngIf="!showPosts ">
+ <div *ngFor="let post of postsOfUser">
+  <div class="posts-list">
+ <li> <label>Title :- </label>{{post.title}}</li>
+ <li><label>Post:-  </label> {{post.body}} </li>
+  </div>
+</div>
+   <button (click)="gotoUserList()">show user List</button>
 </div>
 </div>
